<resources>
  <string name="app_name">Penny Quick</string>
  <string name="splash_message">Recharges &amp; Money Transfer</string>
  <string name="fast_secure">Fast &amp; Secure</string>
  <string name="fast_secure_message">It is Fast and Secure</string>
  <string name="easy_to_use">Easy To Use</string>
  <string name="easy_to_use_message">Manage your financial transaction. Its all easy like never before</string>
  <string name="encrypted">Encrypted</string>
  <string name="encrypted_message">Our new encrypted process makes it more secure</string>
  <string name="continue_text">Continue</string>
  <string name="skip">Skip</string>
  <string name="sign_in">Sign in</string>
  <string name="sign_in_info">Sign with User ID and password to use your account</string>
  <string name="user_id">User ID</string>
  <string name="password">Password</string>
  <string name="remember_password">Remember Password</string>
  <string name="forgot_pwd">Forgot Password</string>
  <string name="power_by">Powered by: \n Bhawani Multi Services Pvt. Ltd.</string>
  <string name="success">success</string>
  <string name="success_login">Successfully Login</string>
  <string name="success_sub">Dear user your account has been successfully login</string>
  <string name="next">Next</string>
  <string name="user_id_blank_error">User id cannot be blank</string>
  <string name="mobile_number_blank_error">Mobile Number cannot be blank</string>
  <string name="mobile_number_incorrect">Incorrect Mobile Number</string>
  <string name="pincode_number_incorrect">Pin code Cannot be empty </string>
  <string name="account_number_error">Account Number Cannot Be Empty</string>
  <string name="bank_error_text">Please Select A Bank</string>
  <string name="recipient_error_text">Please Select A Recipient</string>
  <string name="doc_type_error_text">Please Select A Doc Type</string>
  <string name="ifsc_number_error">IFSC Cannot Be Empty</string>
  <string name="account_id__number_error">Document Id Cannot Be Empty</string>
  <string name="password_blank_error">Password cannot be blank</string>
  <string name="new_password_blank_error">New password cannot be blank</string>
  <string name="re_enter_password_blank_error">Please re-enter same password</string>
  <string name="password_mismatch_error">Both passwords do not match</string>
  <string name="dummy_user_name">Sanket Rangire</string>
  <string name="dummy_number">\u20B9 0.00</string>
  <string name="nav_header_desc">User Photo</string>
  <string name="action_settings">Settings</string>
  <string name="menu_home">Home</string>
  <string name="my_profile">My Profile</string>
  <string name="add_money">Add Money</string>
  <string name="aeps">Aeps</string>
  <string name="recent_transaction">Recent Transaction</string>
  <string name="contact_us">Contact Us</string>
  <string name="dispute_history">Dispute History</string>
  <string name="dispute_form">Dispute Form</string>
  <string name="faq">FAQs</string>
  <string name="terms_and_conditions">Terms &amp; Conditions</string>
  <string name="dummy_transaction_message">This transaction is pending</string>
  <string name="privacy_policy">Privacy policy</string>
  <string name="help">Help</string>
  <string name="help_message">Get Direct Help from Super Admin\nMail: info@pennyquick.in\nPhone: (+91) 7264895939\nAddress: Shivaji Chowk, Bori Arab Dist- Yawatmal Bori Arab, Maharashtra 445201</string>
  <string name="help_number">+917264895939</string>
  <string name="version">Version</string>
  <string name="logout">Logout</string>
  <string name="enter_mob_no_info">Please Enter Your Registered Mobile no.</string>
  <string name="mob_reg_sub">We will send verification code to your registered Mobile Number</string>
  <string name="mobile_no">Mobile No.</string>
  <string name="mobile">Mobile</string>
  <string name="enter_verification_code">Please Enter The Verification Code</string>
  <string name="verification_code_sub">We have sent a verification code to your registered Mobile Number</string>
  <string name="verification_code">We have sent a verification code to your Mobile Number</string>
  <string name="resend">Resend Again</string>
  <string name="enter_new_pwd">Please Enter A New Password</string>
  <string name="enter_pwd">Please Enter A Password</string>
  <string name="enter_name">Please Enter A Name</string>
  <string name="enter_mobile">Please Enter A Mobile Number</string>
  <string name="enter_subject">Please Enter A Subject</string>
  <string name="enter_message_hint">Please Enter A Message</string>
  <string name="send">Send</string>
  <string name="verify_account">Verify Account</string>
  <string name="verify">Verify</string>
  <string name="add_recipient">Add Recipient</string>
  <string name="change_pwd">Change Password</string>
  <string name="current_pwd">Current Password</string>
  <string name="new_password">New Password</string>
  <string name="re_enter_password">Re-Enter Password</string>
  <string name="done">Done</string>
  <string name="hello">Hello</string>
  <string name="wallet_balance">Wallet Balance</string>
  <string name="prepaid">Prepaid</string>
  <string name="provider">Provider</string>
  <string name="postpaid">Postpaid</string>
  <string name="dth">DTH Recharge</string>
  <string name="land_line">Land Line</string>
  <string name="money_transfer">Money Transfer</string>
  <string name="recipient_error">No recipient available</string>
  <string name="bank_error">No banks available</string>
  <string name="add_recepient">Add Recipient</string>
  <string name="recent_recharge">Recent Recharges</string>
  <string name="reports">Reports</string>
  <string name="user_profile">User Profile</string>
  <string name="contact_support">Contact support</string>
  <string name="airtel_dth">Airtel Digital TV</string>
  <string name="dish_tv">Dish TV</string>
  <string name="sun_direct">Sun Direct</string>
  <string name="tata_sky">Tata Sky</string>
  <string name="airtel">Airtel</string>
  <string name="bsnl">BSNL Landline Corporate</string>
  <string name="tata_gsm">Tata DoCoMo  \u0020\u0020\u0020\u0020\u0020\u0020\u0020 GSM</string>
  <string name="tata_gsm1">Tata DoCoMo GSM</string>
  <string name="tata_postpaid">Tata DoCoMo CDMA Postpaid</string>
  <string name="mtnl_delhi">MTNL Delhi</string>
  <string name="mtnl_mumbai">MTNL Mumbai</string>
  <string name="reliance">Reliance</string>
  <string name="d2h">D2H</string>
  <string name="enter_mob_no">Enter Mobile Number</string>
  <string name="select_bank">Select Bank</string>
  <string name="existing_recipient">Existing Recipient List</string>
  <string name="enter_name_title">Enter Name</string>
  <string name="bank_account_number">Bank account number</string>
  <string name="ifsc">IFSC</string>
  <string name="select_operator">Select Operator</string>
  <string name="document_id">Document Id Type</string>
  <string name="document_id_value">Document Id Value</string>
  <string name="pin_code">Enter Pin Code</string>
  <string name="select_provider">Select Provider</string>
  <string name="select_state">Select State</string>
  <string name="enter_amount">Enter Amount</string>
  <string name="view_plans">View Plans</string>
  <string name="plans">Plans</string>
  <string name="recharge">Recharge</string>
  <string name="apply">Apply</string>
  <string name="customer_name">Customer Name</string>
  <string name="name">Name</string>
  <string name="customer_id">Customer ID</string>
  <string name="telephone_number">Telephone Number</string>
  <string name="dish_hint">Registered Mobile No/Viewing Card No</string>
  <string name="sun_direct_hint">Smart Card No</string>
  <string name="tata_sky_hint">Registered Mobile No/Subscriber ID</string>
  <string name="account_number">Account Number</string>
  <string name="mobile_number">Mobile Number</string>
  <string name="subject">Subject</string>
  <string name="submit">Submit</string>
  <string name="enter_message">Enter Message</string>
  <string name="message">Message</string>
  <string name="message_display">Message :</string>
  <string name="month">Month</string>
  <string name="choose_month">Choose Month</string>
  <string name="clear">CLEAR</string>
  <string name="categories">Categories</string>
  <string name="filter">Filters</string>
  <string name="ledger_report">Ledger Report</string>
  <string name="dispute_report">Dispute Report</string>
  <string name="dispute">Dispute</string>
  <string name="debit">DEBIT</string>
  <string name="credit">Credit</string>
  <string name="description">Description : </string>
  <string name="balance">Balance</string>
  <string name="talk_time">Talktime :</string>
  <string name="data">Data :</string>
  <string name="validity">Validity :</string>
  <string name="dummy_validity">28 days</string>
  <string name="dummy_message_1">Data : 3GB/day + 6GB</string>
  <string name="dummy_message_2">Voice : Unlimited Calls(Jio to non-jio FUP)</string>
  <string name="dummy_message_3">Disney + Hotstar Annual Subscription</string>
  <string name="web_view_error">Website Not found.</string>
  <string name="operators">Operators</string>
  <string name="recipient">Recipient</string>
  <string name="bank">Banks</string>
  <string name="state">State</string>
  <string name="recent_recharges">Recent Recharges</string>
  <string name="mobile_recharge">Mobile Recharge</string>
  <string name="transaction_success">Transaction Successful</string>
  <string name="transaction_pending">Transaction Pending</string>
  <string name="transaction_failed">Transaction Failed</string>
  <string name="transaction_dummy_date">02:23 PM on 23rd july 2020</string>
  <string name="date">Date :</string>
  <string name="status">Status</string>
  <string name="transaction_status">Status:</string>
  <string name="transaction_id">Transaction ID</string>
  <string name="dispute_success">Dispute Genrated Successfully</string>
  <string name="contact_us_success">Thank you, We will connect with you soon.</string>
  <string name="enter_transaction_id">Please Enter Transaction ID</string>
  <string name="txn_id">TXN ID:</string>
  <string name="dummy_trans_id">2565412345246542</string>
  <string name="dummy_company_type">Airtel Prepaid</string>
  <string name="dummy_mob_no">9587815463</string>
  <string name="dummy_email">sanket@gmail.com</string>
  <string name="dummy_address">Katraj,Pune 411039</string>
  <string name="dispute_caps">DISPUTE</string>
  <string name="cost">cost</string>
  <string name="dummy_amount">\u20B9 401.00</string>
  <string name="pending">Pending</string>
  <string name="failed">Failed</string>
  <string name="rupees_sign">\u20B9</string>
  <string name="solve">Solve</string>
  <string name="colon">:</string>
  <string name="dummy_data_string">3GB/day + 6GB</string>
  <string name="talktime_of">Talktime of Rs:</string>
  <string name="talktime">Talktime:</string>
  <string name="recharge_detail_message_1">Customer ID starts with 3 and is 10 digit long. To locate it, press the MENU button on remote.</string>
  <string name="recharge_detail_message_2">To know your monthly rental and best offer, give miss call on 81302–81302 from your registered mobile number.</string>
  <string name="recharge_detail_message_3">Please enter a value between Rs.50 and Rs.49000</string>
  <string name="recharge_detail_message_4">Please enter your Number</string>
  <string name="recharge_detail_message_5">Please enter Account Number</string>
  <string name="disclaimer">Disclaimer:We support most types of recharges, but please check with your operator before you proceed.</string>
  <string name="sync">sync</string>
  <string name="otp_error">Invalid OTP</string>
  <string name="otp_error_msg">Please Enter Valid OTP</string>
  <string name="cnt_pwd_error">Please enter correct Current Password</string>
  <string name="new_pwd_error">Please enter correct New Password</string>
  <string name="re_pwd_error">Please enter correct Re-enter Password</string>
</resources>