<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group>

    <item
      android:id="@+id/home"
      android:icon="@drawable/ic_home"
      android:title="@string/menu_home"/>
    <item
      android:id="@+id/profile"
      android:icon="@drawable/ic_profile"
      android:title="@string/my_profile"/>

    <item
      android:id="@+id/add_money"
      android:icon="@drawable/ic_add"
      android:title="@string/add_money"/>

    <item
      android:id="@+id/recentTransaction"
      android:icon="@drawable/ic_recent"
      android:title="@string/recent_transaction"/>

    <item
      android:id="@+id/contactUs"
      android:icon="@drawable/ic_contact"
      android:title="@string/contact_us"/>

    <item
      android:id="@+id/faq"
      android:icon="@drawable/ic_faq"
      android:title="@string/faq"/>

    <item
      android:id="@+id/termsCondition"
      android:icon="@drawable/ic_terms_condition"
      android:title="@string/terms_and_conditions"/>

    <item
      android:id="@+id/privacyPolicy"
      android:icon="@drawable/privacy_policy"
      android:title="@string/privacy_policy"/>

    <item
      android:id="@+id/help"
      android:icon="@drawable/ic_help"
      android:title="@string/help"/>

    <item
      android:id="@+id/version"
      android:icon="@drawable/ic_version"
      android:title="@string/version"/>

    <item
      android:id="@+id/logout"
      android:icon="@drawable/ic_logout"
      android:title="@string/logout"/>

  </group>
</menu>