<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/transaction_page"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_weight="10"
  android:orientation="vertical"
  android:background="@color/transaction_success"
  tools:context=".ui.activities.transaction_status.TransactionStatusActivity">
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2">
    <ImageView
      android:id="@+id/close"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_close"
      android:layout_marginStart="@dimen/textSize_20"
      android:layout_marginTop="@dimen/textSize_20"
      android:contentDescription="@string/status"/>
    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true">
    <ImageView
      android:id="@+id/status_icon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/success"
      android:layout_marginTop="@dimen/distance_20"
      android:contentDescription="@string/status"
      android:layout_centerHorizontal="true"
       />
    <TextView
      android:id="@+id/transaction_status_header"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/status_icon"
      android:textSize="@dimen/textSize_20"
      android:layout_centerHorizontal="true"
      android:text="@string/transaction_success"
      android:textColor="@android:color/white"
      android:layout_marginTop="@dimen/distance_10"/>
    <TextView
      android:id="@+id/transaction_status_header_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/transaction_status_header"
      android:layout_centerHorizontal="true"
      android:textColor="@android:color/white"
      android:textSize="@dimen/textSize_12"
      android:text="@string/transaction_dummy_date"
      android:layout_marginTop="@dimen/distance_3"/>
    </RelativeLayout>

  </RelativeLayout>
  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="5"
    app:cardCornerRadius="8dp"
    android:layout_margin="@dimen/distance_15"
    app:cardElevation="15dp"
    app:cardPreventCornerOverlap="false">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <TextView
        android:id="@+id/rechargeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_recharge"
        android:layout_margin="@dimen/distance_20"
        android:textStyle="bold"
        android:textSize="@dimen/textSize_20"
        android:textColor="@android:color/black"/>
      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_20"
        android:layout_marginEnd="@dimen/distance_20">
        <ImageView
          android:id="@+id/company_icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/airtel_small"
          android:layout_gravity="center_vertical"
          android:layout_alignParentStart="true"
          android:contentDescription="@string/airtel"/>
        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_toEndOf="@+id/company_icon"
          android:layout_marginStart="@dimen/distance_15"
          android:layout_gravity="center_vertical"
          android:orientation="vertical">
          <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_company_type"
            android:textSize="@dimen/textSize_13"
            android:textColor="@android:color/black"/>
          <TextView
            android:id="@+id/customer_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_mob_no"
            android:textSize="@dimen/textSize_13"
            android:layout_marginTop="@dimen/distance_5"
            android:textColor="@android:color/black"/>

        </LinearLayout>

        <TextView
          android:id="@+id/amount"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/dummy_amount"
          android:layout_alignParentEnd="true"
          android:layout_centerVertical="true"
          android:contentDescription="@string/cost"
          android:textStyle="bold"
          android:textSize="@dimen/textSize_20"
          android:textColor="@android:color/black"
          tools:ignore="RelativeOverlap" />

      </RelativeLayout>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txn_id"
        android:layout_marginTop="@dimen/distance_20"
        android:layout_marginStart="@dimen/distance_20"
        android:textStyle="bold"
        android:textSize="@dimen/textSize_20"
        android:textColor="@android:color/black"/>
      <TextView
        android:id="@+id/transaction_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_trans_id"
        android:layout_marginStart="@dimen/distance_20"
        android:textSize="@dimen/textSize_13"
        android:textColor="@android:color/black"/>
      <TextView
        android:id="@+id/dateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_dummy_date"
        android:layout_marginStart="@dimen/distance_20"
        android:textSize="@dimen/textSize_13"
        android:textColor="@android:color/black"/>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/distance_20"
        android:orientation="horizontal">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_status"
        android:textStyle="bold"
        android:textSize="@dimen/textSize_20"
        android:textColor="@android:color/black"/>
        <TextView
          android:id="@+id/status"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/success"
          android:textSize="@dimen/textSize_20"
          android:layout_marginStart="@dimen/distance_5"
          android:textColor="@android:color/black"/>
      </LinearLayout>
      <TextView
        android:id="@+id/dispute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/x_small_btn_background"
        android:text="@string/dispute_caps"
        android:textColor="@android:color/white"
        android:paddingStart="@dimen/distance_10"
        android:paddingEnd="@dimen/distance_10"
        android:paddingTop="@dimen/distance_5"
        android:paddingBottom="@dimen/distance_5"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/distance_15"
        />
    </LinearLayout>

  </androidx.cardview.widget.CardView>
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3">
    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/penny_powered_by_logo"
      android:layout_centerInParent="true"
      android:contentDescription="@string/app_name"/>

  </RelativeLayout>
</LinearLayout>