<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/label1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/distance_50"
        android:contentDescription="@string/fast_secure"
        android:src="@drawable/easy_to_use" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/easy_to_use"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize_35" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginStart="@dimen/distance_10"
        android:layout_marginTop="@dimen/distance_20"
        android:layout_marginEnd="@dimen/distance_10"
        android:text="@string/easy_to_use_message"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize_16" />

    <Button
        android:id="@+id/bt_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/distance_30"
        android:layout_marginTop="@dimen/distance_50"
        android:layout_marginEnd="@dimen/distance_30"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:padding="@dimen/distance_10"
        android:textAllCaps="false"
        android:text="@string/next"
        android:textSize="@dimen/textSize_17"/>

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/v_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/distance_30"
        android:text="@string/skip"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize_17" />

    <View
        android:id="@+id/v_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/distance_100"
        android:layout_marginEnd="@dimen/distance_100"
        android:layout_marginBottom="@dimen/distance_30"
        android:background="@drawable/bottom_bar_background" />
</RelativeLayout>